--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -2,11 +2,17 @@ plugins {
 	id 'org.springframework.boot' version '2.2.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id 'org.asciidoctor.convert' version '1.5.6'
 }
 
 group = 'com.amayr'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+
+asciidoctor {
+	sourceDir 'src/main/asciidoc'
+	attributes 'snippets': file('build/generated-snippets/')
+}
 
 configurations {
 	developmentOnly
@@ -29,6 +35,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
